@@ -28,9 +28,6 @@ import io.openbas.database.raw.RawScenario;
 import io.openbas.database.repository.*;
 import io.openbas.database.specification.ScenarioSpecification;
 import io.openbas.ee.Ee;
-import io.openbas.engine.model.EsBase;
-import io.openbas.engine.query.EsAttackPath;
-import io.openbas.engine.query.EsSeries;
 import io.openbas.export.Mixins;
 import io.openbas.helper.ObjectMapperHelper;
 import io.openbas.rest.dashboard.DashboardService;
@@ -59,7 +56,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.time.Instant;
 import java.util.*;
-import java.util.concurrent.ExecutionException;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -78,7 +74,6 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.HttpHeaders;
-import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
@@ -111,7 +106,6 @@ public class ScenarioService {
   private final LicenseCacheManager licenseCacheManager;
 
   private final Ee eeService;
-  private final GrantService grantService;
   private final VariableService variableService;
   private final ChallengeService challengeService;
   private final TeamService teamService;
@@ -127,18 +121,22 @@ public class ScenarioService {
 
   @Transactional
   public Scenario createScenario(@NotNull final Scenario scenario) {
+    computeEmails(scenario);
+    this.actionMetricCollector.addScenarioCreatedCount();
+    return this.scenarioRepository.save(scenario);
+  }
+
+  public void computeEmails(@NotNull Scenario scenario) {
     if (!hasText(scenario.getFrom())) {
       if (this.imapEnabled) {
         scenario.setFrom(this.imapUsername);
-        scenario.setReplyTos(List.of(this.imapUsername));
+        scenario.setReplyTos(new ArrayList<>(Arrays.asList(this.imapUsername)));
       } else {
         scenario.setFrom(this.openBASConfig.getDefaultMailer());
-        scenario.setReplyTos(List.of(this.openBASConfig.getDefaultReplyTo()));
+        scenario.setReplyTos(
+            new ArrayList<>(Arrays.asList(this.openBASConfig.getDefaultReplyTo())));
       }
     }
-    this.grantService.computeGrant(scenario);
-    this.actionMetricCollector.addScenarioCreatedCount();
-    return this.scenarioRepository.save(scenario);
   }
 
   public List<ScenarioSimple> scenarios() {
@@ -700,71 +698,6 @@ public class ScenarioService {
       @NotNull final Scenario scenario, @NotNull final List<String> newTags) {
     return tagRuleService.checkIfRulesApply(
         scenario.getTags().stream().map(Tag::getId).toList(), newTags);
-  }
-
-  public long dashboardCount(
-      @NotBlank final String scenarioId,
-      @NotBlank final String widgetId,
-      final Map<String, String> parameters) {
-    // verify that the widget is in the scenario dashboard
-    Scenario scenario = this.scenario(scenarioId);
-    if (scenario.getCustomDashboard() == null
-        || !scenario.getCustomDashboard().getWidgets().stream()
-            .map(Widget::getId)
-            .collect(Collectors.toSet())
-            .contains(widgetId)) {
-      throw new AccessDeniedException("Access denied");
-    }
-    return this.dashboardService.count(widgetId, parameters);
-  }
-
-  public List<EsSeries> dashboardSeries(
-      @NotBlank final String scenarioId,
-      @NotBlank final String widgetId,
-      final Map<String, String> parameters) {
-    // verify that the widget is in the scenario dashboard
-    Scenario scenario = this.scenario(scenarioId);
-    if (scenario.getCustomDashboard() == null
-        || !scenario.getCustomDashboard().getWidgets().stream()
-            .map(Widget::getId)
-            .collect(Collectors.toSet())
-            .contains(widgetId)) {
-      throw new AccessDeniedException("Access denied");
-    }
-    return this.dashboardService.series(widgetId, parameters);
-  }
-
-  public List<EsBase> dashboardEntities(
-      @NotBlank final String scenarioId,
-      @NotBlank final String widgetId,
-      final Map<String, String> parameters) {
-    // verify that the widget is in the scenario dashboard
-    Scenario scenario = this.scenario(scenarioId);
-    if (scenario.getCustomDashboard() == null
-        || !scenario.getCustomDashboard().getWidgets().stream()
-            .map(Widget::getId)
-            .collect(Collectors.toSet())
-            .contains(widgetId)) {
-      throw new AccessDeniedException("Access denied");
-    }
-    return this.dashboardService.entities(widgetId, parameters);
-  }
-
-  public List<EsAttackPath> dashboardAttackPaths(
-      @NotBlank final String scenarioId,
-      @NotBlank final String widgetId,
-      final Map<String, String> parameters)
-      throws ExecutionException, InterruptedException {
-    // verify that the widget is in the scenario dashboard
-    Scenario scenario = this.scenario(scenarioId);
-    if (scenario.getCustomDashboard() == null
-        || !scenario.getCustomDashboard().getWidgets().stream()
-            .map(Widget::getId)
-            .collect(Collectors.toSet())
-            .contains(widgetId)) {
-      throw new AccessDeniedException("Access denied");
-    }
-    return this.dashboardService.attackPaths(widgetId, parameters);
   }
 
   private void getListOfScenarioTeams(
